--- a/example/webapp/src/main/webapp/index.xhtml
+++ b/example/webapp/src/main/webapp/index.xhtml
@@ -4,7 +4,7 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:ice="http://www.icesoft.com/icefaces/component">
+      xmlns:pl="http://java.net/plummer">
     <head>
         <title>Should Not Be Displayed</title>
     </head>
@@ -21,5 +21,7 @@
         <hr />
         <h1>FileDataStore</h1>
         #{fileDataStore.description}
+        <hr/>
+        <pl:viewFragment type="foo"/>
     </body>
 </html>
