--- a/examples/plummer-sample1/src/main/resources/sample1.xhtml
+++ b/examples/plummer-sample1/src/main/resources/sample1.xhtml
@@ -5,4 +5,5 @@
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:ui="http://java.sun.com/jsf/facelets">
     <h1>Plugin Fragment</h1>
+    This text comes from a fragment. Shiny!
 </ui:fragment>
