OSGi jars don't need to be bundled with the app. Created a new Tag qualifier to mark BlogEntryProcessors that provide tag-based processing Removed old, unused code Implemented GoogleMapsProcessor Added @Translator qualifier to translators property of BlogBean to restrict UI to showing only Translators Cleaned up REST resource examples. Added "real" functionality.

--- a/examples/webapp/src/main/webapp/blog.xhtml
+++ b/examples/webapp/src/main/webapp/blog.xhtml
@@ -21,14 +21,14 @@
         </h:form>
         <h:dataTable id="entries" value="#{blogBean.entries}" var="entry" >
             <h:column>
-                #{entry}
+                <h:outputText value="#{entry}" escape="false"/>
             </h:column>
         </h:dataTable>
         <hr/>
 
         <h:form>
             <h:outputLabel for="entry" value="New Entry"/>
-            <h:inputTextarea id="entry" value="#{blogBean.entry}" rows="20" cols="120"/>
+            <h:inputTextarea id="entry" value="#{blogBean.entry}" rows="10" cols="120"/>
             <br/>
             <h:commandButton value="Add" action="#{blogBean.addEntry}"/>
         </h:form>
