--- a/examples/webapp/src/main/webapp/fragment.xhtml
+++ b/examples/webapp/src/main/webapp/fragment.xhtml
@@ -7,11 +7,11 @@
       xmlns:pl="http://java.net/plummer">
     <h:head>
     </h:head>
-    <body>
+    <h:body>
         <h1>View fragments should be displayed below</h1>
         <div style="border: 2px dashed red">
         <pl:viewFragment type="foo"/>
         </div>
         <h1>View fragments should be displayed above</h1>
-    </body>
+    </h:body>
 </html>
